Changed events container z-index to preventing calendar list covering

--- a/even2cal/app/assets/stylesheets/application.css
+++ b/even2cal/app/assets/stylesheets/application.css
@@ -465,7 +465,7 @@ body, html {
   background:    url("wash-white.png") repeat scroll 0% 0% transparent;
   position:      absolute;
   border-radius: 16px 16px 16px 16px;
-  z-index:       10;
+  z-index:       9;
   top:           2170px;
   right:         110px;
   width:         550px;
